--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">capture-sender</string>
-    <string name="title_activity_main">Screen Capture Control</string>
+    <string name="app_name">android-rc</string>
+    <string name="title_activity_main">Android RC</string>
     <string name="title_activity_settings">Settings</string>
     <string name="accessibility_service_description">Touch Emulation Service</string>
 
@@ -8,6 +8,14 @@
     <string name="toggle_button_stop_accessibility_service">Stop Touch Emulation Service</string>
     <string name="toggle_button_start_service">Start Capture Service</string>
     <string name="toggle_button_stop_service">Stop Capture Service</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
 
     <!-- sample resource
